# membrane

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: clippy.yml  test.yml  valgrind.py  valgrind.yml
dart_example/: dart_test.yaml
dart_example/test/: async_c_test.dart  enum_test.dart  main_test.dart  render_c_test.dart
dart_tests/test/: enum_test.dart  main_test.dart  render_c_test.dart  threading_c_test.dart
example/: Cargo.toml  build.rs  threading_example.c  threading_example.h
example/c/: render_example.c  render_example.h  threading_example.c  threading_example.h
example/src/: application.rs  c_example.rs  data.rs  generator.rs  lib.rs
example/src/application/: advanced.rs  c_example.rs  c_render.rs  mod.rs  simple.rs
membrane/: Cargo.toml
membrane/src/: config.rs  emitter.rs  ffi_types.rs  lib.rs  metadata.rs  registry.rs  runtime.rs  utils.rs
membrane/src/generators/: exceptions.rs  functions.rs  imports.rs  loaders.rs  mod.rs
membrane/tests/: codegen_reborrow_test.rs  codegen_self_borrow_test.rs  compiler_tests.rs  integration_tests.rs  mock.rs  test_utils.rs
membrane/tests/ui/: single.rs  single.stderr  stream.rs  stream.stderr
membrane_macro/: Cargo.toml
membrane_macro/src/: codegen.rs  lib.rs  options.rs  parsers.rs  utils.rs
membrane_tests/: Cargo.toml  build.rs
membrane_tests/c/: threading_example.c
membrane_tests/src/: data.rs  generator.rs
membrane_types/: Cargo.toml
membrane_types/src/: c.rs  dart.rs  lib.rs  rust.rs  utils.rs
