[workspace]
resolver = "3"
exclude = [
  "example",
]
members = [
  "membrane_types",
  "membrane_macro",
  "membrane",
]

[workspace.package]
authors = ["Jerel Unruh <mail@unruhdesigns.com>"]
description = "Membrane is an opinionated crate that generates a Dart package from a Rust library. Extremely fast performance with strict typing and zero copy returns over the FFI boundary via bincode."
edition = "2018"
keywords = ["dart", "ffi", "flutter", "bindings", "codegen"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/jerel/membrane"
rust-version = "1.84"
version = "1.0.1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

needless_for_each = "deny"   # prefer for loop over iter().for_each() for plain side effects
manual_string_new = "deny"   # "".to_string() → String::new()
implicit_clone = "deny"      # clone-before-iterate when a borrow would do
redundant_clone = "deny"     # clone that is never used as the original

# Allow noisy pedantic lints that don't apply well to a codegen crate
match_same_arms = "allow"             # codegen arms are intentionally repetitive
missing_errors_doc = "allow"          # internal builder API, not a public errors-doc crate
missing_panics_doc = "allow"          # same
too_many_lines = "allow"              # codegen methods are inherently long
needless_raw_string_hashes = "allow"  # raw strings in Dart codegen have necessary hashes
must_use_candidate = "allow"          # builder pattern returns &mut Self, not worth annotating every fn
redundant_pub_crate = "allow"         # inventory-collected items need pub(crate) visibility hints
option_if_let_else = "allow"          # often clearer than the map_or_else alternative
doc_markdown = "allow"                # Dart/FFI identifiers in docs trip this frequently
missing_const_for_fn = "allow"        # premature optimisation for a build-time codegen crate
semicolon_if_nothing_returned = "allow"  # style preference already handled by rustfmt

[workspace.dependencies]
example = { path = "./example", features = ["c-example"] }
membrane_types = { version = "0.5", path = "./membrane_types" }
membrane_macro = { version = "0.9", path = "./membrane_macro" }
serde-generate = { version = "0.33", features = ["dart"] }
serde-reflection = { version = "0.5" }

allo-isolate = "0.1"
bincode = "1.3"
ffi_helpers = "0.3"
futures = { version = "0.3", features = ["executor"] }
git-version = "0.3"
heck = "0.5"
inventory = "0.3"
libloading = "0.8"
once_cell = "1.21"
pretty_assertions = "1.4"
pretty_env_logger = "0.5"
proc-macro2 = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serial_test = "3.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "1"
trybuild = "1.0"
tracing = { version = "0.1", features = ["log"] }
quote = "1.0"
