[package]
description = "An example application using Membrane"
edition = "2018"
license = "Apache-2.0"
name = "example"
repository = "https://github.com/jerel/membrane"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generator"
path = "src/generator.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
c-example = ["cc"]
codegen = ["membrane/generate"]
skip-codegen = ["membrane/skip-generate"]

[dependencies]
async-stream = "0.3"
derated = {path = "../../derated"}
futures = "0.3"
membrane = {path = "../membrane"}
once_cell = "*"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"

[build-dependencies]
cc = {version = "1.0", optional = true}
