[package]
authors = ["Jerel Unruh <mail@unruhdesigns.com>"]
description = "Membrane is an opinionated crate that generates a Dart package from a Rust library. Extremely fast performance with strict typing and zero copy returns over the FFI boundary via bincode."
edition = "2018"
keywords = ["dart", "ffi", "flutter", "bindings", "codegen"]
license = "Apache-2.0"
name = "membrane"
readme = "../README.md"
repository = "https://github.com/jerel/membrane"
version = "0.6.3"

[lib]
crate-type = ["lib"]
doctest = false

[features]
c-example = []
generate = ["membrane_macro/generate"]
skip-generate = ["membrane_macro/skip-generate"]

[dependencies]
allo-isolate = "0.1"
bincode = "1.3"
ffi_helpers = "0.2"
futures = {version = "0.3", features = ["executor"]}
inventory = "0.1"
membrane_macro = {version = "0.5", path = "../membrane_macro"}
membrane_types = {version = "0.3", path = "../membrane_types"}
once_cell = "1.12"
pretty_env_logger = "0.4"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde-generate = {git = "https://github.com/jerel/serde-reflection", rev = "2eb54dd"}
serde-reflection = {git = "https://github.com/jerel/serde-reflection", rev = "2eb54dd"}
tracing = {version = "0.1", features = ["log"]}

[dev-dependencies]
example = {path = "../example", features = ["c-example"]}
pretty_assertions = "1.2"
serial_test = "0.6"
trybuild = "1.0"
