[package]
name = "membrane"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[features]
c-example = []
generate = ["membrane_macro/generate"]
skip-generate = ["membrane_macro/skip-generate"]

[dependencies]
allo-isolate.workspace = true
bincode.workspace = true
ffi_helpers.workspace = true
futures.workspace = true
git-version.workspace = true
inventory.workspace = true
libloading.workspace = true
membrane_macro.workspace = true
membrane_types.workspace = true
once_cell.workspace = true
pretty_env_logger.workspace = true
regex.workspace = true
serde.workspace = true
serde-generate.workspace = true
serde-reflection.workspace = true
tracing.workspace = true

[dev-dependencies]
example.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
trybuild.workspace = true
