[package]
authors = ["Jerel Unruh <mail@unruhdesigns.com>"]
description = "A companion crate for `membrane`"
edition = "2018"
license = "Apache-2.0"
name = "membrane_macro"
version = "0.4.0"

[lib]
proc-macro = true

[features]
generate = []
skip-generate = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
membrane_types = {version = "^0.3", path = "../membrane_types"}
