[package]
name = "membrane_macro"
version = "0.9.0"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
generate = []
skip-generate = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
membrane_types.workspace = true
once_cell.workspace = true
toml.workspace = true
