[package]
description = "A companion crate for `membrane`"
edition = "2018"
license = "Apache-2.0"
name = "membrane_types"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
